LPD-64953 refactor: use getFirst and pass the companyId to use a non deprecated method